Bug 1638288 - Port Bug 1636148 - Make calling nsIPrincipal->GetURI a clang-error. rs=bustage-fix DONTBUILD